--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,22 @@ version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+crate-type = ["cdylib"]
 
 [dependencies]
+wasm-bindgen = "0.2.84"
+image = "0.24.6"
+base64 = "0.21.0"
+
+[dependencies.web-sys]
+version = "0.3.61"
+features = [
+    "Window",
+    "Document",
+    "HtmlImageElement",
+    "HtmlCanvasElement",
+    "ImageData",
+]
+[dependencies.js-sys]
+version = "0.3.61"
